Show errors for blank message in conversation

--- a/app/views/users/message.html.erb
+++ b/app/views/users/message.html.erb
@@ -10,9 +10,9 @@
 <br/><br/>
 
 <%= form_for(@message) do |f| %>
-  <% if @user.errors.any? %>
+  <% if @message.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
+      <h2><%= pluralize(@message.errors.count, "error") %> prohibited this user from being saved:</h2>
 
       <ul>
       <% @message.errors.full_messages.each do |msg| %>
