--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,19 +6,27 @@
         = stylesheet_link_tag "application"
         = javascript_include_tag "application"
         = csrf_meta_tags
-
     %body
-        .nav
+        #header
+            .nav
             - if current_user
-                %a.edit= link_to "Edit Profile", edit_user_path(current_user.id)
-                %a.logout= link_to "Logout", :logout
+                %a.linky= link_to "Edit Profile", edit_user_path(current_user.id)
+                %a.linky= link_to "Logout", :logout
             -else
-                %a.register= link_to "Register", new_user_path
-                %a.login= link_to "Login", :login
-        .greet
-            -if current_user
-                Welcome,
-                =current_user.username.capitalize
-        = yield
+                %a.linky= link_to "Register", new_user_path
+                %a.linky= link_to "Login", :login
+            .greet
+                -if current_user
+                    Welcome,
+                    =current_user.username.capitalize
+            .logo= image_tag("messagetitle.png")
+   
+        #container 
+            .content
+                = yield
+    .footer
+        %p.tagline Cast your message.
+
+
 
 
