--- a/app/views/public/index.html.haml
+++ b/app/views/public/index.html.haml
@@ -1,7 +1,5 @@
 %p#notice= notice
 
-This is the home page.
-
-.link
+.mates.link
   - if current_user
     %a.users= link_to "See Your Mates", :users
