--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,3 +1,6 @@
 %h1 New user
+.info Take a moment to fill out the form below and come aboard!
+%br
 = render 'form'
-= link_to 'Back', :root
+
+%a= link_to image_tag("button.png", :border=>0), :root
