--- a/app/views/users/message.html.haml
+++ b/app/views/users/message.html.haml
@@ -1,32 +1,33 @@
 %h1 Conversation with #{@user.username.capitalize}
 %p#notice= notice
-%br/
-- @messages.each do |message|
-  %b
-    %div.blip
-      = message.sender.username
-      \:
-      = message.text
+#conversation.clearfix
+  %br/
+  - @messages.each do |message|
+    %b
+      %div.blip
+        = message.sender.username
+        \:
+        = message.text
+        %br/
+  %br/
+  %br/
+  = form_for(@message) do |f|
+    - if @message.errors.any?
+      #error_explanation
+        %h2
+          = pluralize(@message.errors.count, "error")
+          prohibited this user from being saved:
+        %ul
+          - @message.errors.full_messages.each do |msg|
+            %li= msg
+    .field
+      = f.label :text, "Write your message"
       %br/
-%br/
-%br/
-= form_for(@message) do |f|
-  - if @message.errors.any?
-    #error_explanation
-      %h2
-        = pluralize(@message.errors.count, "error")
-        prohibited this user from being saved:
-      %ul
-        - @message.errors.full_messages.each do |msg|
-          %li= msg
-  .field
-    = f.label :text, "Write your message"
-    %br/
-    = f.text_area :text
-  = f.hidden_field :sender_id, :value => current_user.id
-  = f.hidden_field :receiver_id, :value => @user.id
-  .actions
-    = f.submit "Cast it"
+      = f.text_area :text
+    = f.hidden_field :sender_id, :value => current_user.id
+    = f.hidden_field :receiver_id, :value => @user.id
+    .actions
+      = f.submit "Cast it"
 
 %br
 .link=link_to 'Home', :root
